--- a/aboutus.html
+++ b/aboutus.html
@@ -9,11 +9,11 @@
                 <nav>
                     <img src="images\Screenshot (102).png" alt="flaminGo" class="logo">
                     <ul>
-                        <li><a href="styleshop.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="products.html">Shop</a></li>
                         <li><a href="aboutus.html" class="active">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                        <li><a href="products.html"><img src="https://i.ibb.co/PNjjx3y/cart.png" alt="" width="30px" height="30px" /></a></li>
+                        <li><a href="cart.html"><img src="https://i.ibb.co/PNjjx3y/cart.png" alt="" width="30px" height="30px" /></a></li>
                     </ul>
                 </nav>
             </div>
