--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
                 <nav>
                     <img src="images\Screenshot (102).png" alt="flaminGo" class="logo">
                     <ul>
-                        <li><a href="styleshop.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="products.html">Shop</a></li>
                         <li><a href="aboutus.html">About</a></li>
                         <li><a href="contact.html" class="active">Contact</a></li>
