--- a/aboutus.html
+++ b/aboutus.html
@@ -20,7 +20,7 @@
             </header>
         <div class="about">
                 <div class="statement">
-                <p>Welcome to Flamingo, where our passion for technology fuels our commitment to providing you with the most cutting-edge gadgets and devices on the market. As an industry-leading team, we take pride in introducing innovation and convenience into your everyday life.
+                <p>Welcome to Flamingo, where our passion for technology fuels our commitment to providing <br> you with the most cutting-edge gadgets and devices on the market. As an industry-leading team, we take pride in introducing innovation and convenience into your everyday life.
 
                     At the core of our mission is a dedication to delivering not just products, but experiences that resonate with the modern consumer. FlaminGo stands as a testament to our unwavering commitment to quality, reliability, and customer satisfaction.
                     
